--- a/losnogales/src/index.css
+++ b/losnogales/src/index.css
@@ -68,9 +68,15 @@
  
 @layer base {
   * {
-    @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    font-family: 'Poppins';
   }
+  html{
+    scroll-behavior: smooth;
+  }
+}
+
+#title{
+  text-shadow: 3px 3px 8px rgba(0,0,0,0.8);
 }
